# korin

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/capsule_corp/: Cargo.toml
crates/capsule_corp/src/: document.rs  element.rs  lib.rs  property.rs
crates/capsule_corp/src/brief/: box_model.rs  core.rs  engine.rs  mod.rs  resolve.rs  text.rs
crates/capsule_corp/src/brief/flex/: align.rs  collect.rs  core.rs  cross.rs  flexible.rs  lines.rs  mod.rs
crates/capsule_corp/src/bulma/: cascade.rs  computed.rs  core.rs  document.rs  element.rs  invalidation.rs  mod.rs  query.rs  restyle.rs  rule.rs
crates/capsule_corp/src/parser/: color.rs  declaration.rs  error.rs  keyword.rs  length.rs  mod.rs  rule.rs  selector.rs  stylesheet.rs  unresolved.rs  value.rs
crates/capsule_corp/src/values/: border.rs  color.rs  custom.rs  edges.rs  element.rs  keyword.rs  layout.rs  length.rs  mod.rs  unresolved.rs
crates/capsule_corp/tests/: brief.rs  bulma.rs
crates/dom_events/: Cargo.toml
crates/dom_events/src/: composition.rs  custom.rs  event.rs  focus.rs  input.rs  keyboard.rs  lib.rs  mouse.rs  pointer.rs  units.rs  wheel.rs
crates/ginyu/: Cargo.toml
crates/ginyu/src/: element.rs  lib.rs  macros.rs  property.rs
crates/ginyu/src/parser/: declaration.rs  error.rs  keyword.rs  length.rs  mod.rs  rule.rs  stylesheet.rs  unresolved.rs  value.rs
crates/ginyu/src/values/: custom.rs  length.rs  mod.rs  overflow.rs  specified.rs  text.rs  unresolved.rs
crates/ginyu_force/: Cargo.toml  poses.txt
crates/ginyu_force/benches/: pose.rs
crates/ginyu_force/src/: interner.rs  lib.rs
crates/ginyu_poses/: Cargo.toml  build.rs  poses.txt
crates/ginyu_poses/benches/: pose.rs
crates/ginyu_poses/src/: lib.rs
crates/korin/: Cargo.toml
crates/korin/examples/: absolute.rs  basic.rs  hello.rs  overflow.rs  refs.rs  scroll.rs  show.rs
crates/korin/src/: document.rs  element.rs  html.rs  lib.rs  prelude.rs
crates/korin/src/events/: default.rs  focus.rs  hit_test.rs
crates/korin/src/render/: mod.rs  paint.rs  terminal.rs
crates/korin/src/view/: children.rs  context.rs  either.rs  element.rs  for_loop.rs  html_elements.rs  mod.rs
crates/korin/tests/: focus.rs  view.rs
crates/korin_components/: Cargo.toml
crates/korin_components/src/: button.rs  container.rs  for_loop.rs  keyed.rs  lib.rs  show.rs  text_input.rs
crates/korin_core/: Cargo.toml
crates/korin_core/examples/: basic.rs
crates/korin_core/src/: attributes.rs  backend.rs  border.rs  document.rs  element.rs  error.rs  geometry.rs  lib.rs
crates/korin_core/src/primitives/: div.rs  mod.rs  text.rs
crates/korin_core/src/primitives/traits/: bordered.rs  mod.rs
crates/korin_document/examples/: basic.rs
crates/korin_document/src/: document.rs
crates/korin_document/src/primitives/: mod.rs
crates/korin_dom/: Cargo.toml
crates/korin_dom/src/: lib.rs  node.rs
crates/korin_event/: Cargo.toml
crates/korin_event/src/: context.rs  event.rs  events.rs  handler.rs  lib.rs  listeners.rs
crates/korin_event/src/events/: blur.rs  focus.rs  key.rs  mod.rs  mouse.rs  resize.rs  scroll.rs
crates/korin_focus/: Cargo.toml
crates/korin_focus/src/: lib.rs
crates/korin_geometry/: Cargo.toml
crates/korin_geometry/src/: lib.rs
crates/korin_layout/: Cargo.toml
crates/korin_layout/src/: engine.rs  error.rs  geometry.rs  layout.rs  lib.rs  measure.rs  style.rs
crates/korin_layout/src/conversions/: dimension.rs  f32.rs  length_percentage.rs  length_percentage_auto.rs  mod.rs  repeat_tracks.rs  tracks.rs
crates/korin_macros/: Cargo.toml
crates/korin_macros/src/: component.rs  event.rs  lib.rs  utils.rs  view.rs
crates/korin_ratatui/: Cargo.toml
crates/korin_ratatui/examples/: basic.rs
crates/korin_ratatui/src/: converstions.rs  event.rs  lib.rs  prelude.rs  renderer.rs  state.rs
crates/korin_reactive/: Cargo.toml
crates/korin_reactive/src/: lib.rs  ref_.rs
crates/korin_render/: Cargo.toml
crates/korin_runtime/: Cargo.toml
crates/korin_runtime/src/: children.rs  context.rs  error.rs  inner.rs  lazy.rs  lib.rs  node.rs  node_ref.rs  owned.rs
crates/korin_runtime/tests/: smoke.rs
crates/korin_style/: Cargo.toml
crates/korin_style/src/: appearance.rs  border.rs  color.rs  lib.rs  psuedo.rs  text.rs
crates/korin_tower/: Cargo.toml
crates/korin_tower/src/: document.rs  element.rs  lib.rs  node.rs
crates/korin_tower/src/events/: default.rs  dispatch.rs  focus.rs  handler.rs  hit_test.rs  hover.rs  mod.rs
crates/korin_tower/src/view/: any_view.rs  fragment.rs  html_elements.rs  mountable.rs  show.rs  text.rs
crates/korin_tower/tests/: focus.rs  view.rs
crates/korin_tree/: Cargo.toml
crates/korin_tree/src/: lib.rs
crates/korin_tui/: Cargo.toml
crates/korin_tui/src/: buffer.rs  cell.rs  event.rs  lib.rs  panic.rs  prelude.rs  terminal.rs
crates/korin_tui/src/renderer/: container.rs  mod.rs  text.rs
crates/korin_tui/src/symbols/: border.rs  mod.rs  scroll.rs
crates/korin_view/: Cargo.toml
crates/korin_view/src/: any.rs  container.rs  event.rs  into_view.rs  lib.rs  render.rs  style.rs  text.rs  view.rs
crates/potara/: Cargo.toml
crates/potara/src/: context.rs  lib.rs  refs.rs  runtime.rs  scope.rs  state.rs
crates/scouter/: Cargo.toml
