[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
pedantic = "warn"
nursery = "warn"
unwrap_used = { level = "forbid", priority = 1 }
enum_glob_use = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }

[workspace.dependencies]
dom_events = { workspace = true, path = "crates/dom_events" }
korin_core = { workspace = true, path = "crates/korin_core" }

bitflags = "2"
euclid = "0.22"
keyboard-types = "0.8"
markup5ever = "0.36"
slotmap = "1"
