[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
pedantic = "warn"
nursery = "warn"
unwrap_used = { level = "forbid", priority = 1 }
enum_glob_use = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }

[workspace.dependencies]
# korin deps
dom_events = { workspace = true, path = "crates/dom_events" }
korin_core = { workspace = true, path = "crates/korin_core" }
ginyu_force = { workspace = true, path = "crates/ginyu_force" }

# member deps
bitflags = "2"
keyboard-types = "0.8"
slotmap = "1"
thiserror = "2"
rustc-hash = "2"
precomputed-hash = "0.1"
parking_lot = "0.12"
quote = "1"
proc-macro2 = "1"
criterion = "0.8"

# Servo deps
cssparser = "0.36"
euclid = "0.22"
selectors = "0.33"
