[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
pedantic = "warn"
nursery = "warn"
unwrap_used = { level = "forbid", priority = 1 }
enum_glob_use = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }

[workspace.dependencies]
# korin deps
capsule_corp = { workspace = true, path = "crates/capsule_corp" }
dom_events = { workspace = true, path = "crates/dom_events" }
ginyu_force = { workspace = true, path = "crates/ginyu_force" }
potara = { workspace = true, path = "crates/potara" }

# member deps
bitflags = "2"
keyboard-types = "0.8"
thiserror = "2"
rustc-hash = "2"
precomputed-hash = "0.1"
parking_lot = "0.12"
quote = "1"
proc-macro2 = "1"
criterion = "0.8"
unicode-width = "0.2"
unicode-segmentation = "1"
indexmap = "2"
indextree = "4"
tracing = "0.1"
slotmap = "1"

# Servo deps
cssparser = "0.36"
euclid = "0.22"
selectors = "0.33"
smallvec = "1"
