[package]
name = "capsule_corp"
version.workspace = true
edition.workspace = true

[dependencies]
ginyu_force.workspace = true

cssparser.workspace = true
selectors.workspace = true

bitflags.workspace = true
thiserror.workspace = true
rustc-hash.workspace = true
precomputed-hash.workspace = true
smallvec.workspace = true

[lints]
workspace = true
