[package]
name = "korin"
version.workspace = true
edition.workspace = true

[dependencies]
dom_events.workspace = true
capsule_corp.workspace = true
ginyu_force.workspace = true
potara.workspace = true

indexmap.workspace = true
indextree.workspace = true
tracing.workspace = true
smallvec.workspace = true
rustc-hash.workspace = true
slotmap.workspace = true

[lints]
workspace = true
