[package]
name = "korin_components"
version.workspace = true
edition.workspace = true

[dependencies]
korin_event.workspace = true
korin_runtime.workspace = true
korin_style.workspace = true
korin_reactive.workspace = true
korin_view.workspace = true
korin_layout.workspace = true
korin_macros.workspace = true

[lints]
workspace = true
