[package]
name = "korin_event"
version.workspace = true
edition.workspace = true

[dependencies]
bitflags.workspace = true
crossterm = { workspace = true, optional = true, default-features = false, features = [
  "events",
] }

[lints]
workspace = true

[features]
default = []
crossterm = ["dep:crossterm"]
