[package]
name = "korin_layout"
version.workspace = true
edition.workspace = true

[dependencies]
korin_tree.workspace = true
korin_geometry = { workspace = true, features = ["taffy"] }

slotmap.workspace = true
taffy.workspace = true
thiserror.workspace = true
unicode-width.workspace = true
tracing.workspace = true

[lints]
workspace = true
