[package]
name = "korin_ratatui"
version.workspace = true
edition.workspace = true

[dependencies]
korin_runtime.workspace = true
korin_tree.workspace = true
korin_layout.workspace = true
korin_style.workspace = true

ratatui.workspace = true

[dev-dependencies]
korin_view.workspace = true

[lints]
workspace = true
