[package]
name = "korin_ratatui"
version.workspace = true
edition.workspace = true

[dependencies]
korin_event.workspace = true
korin_runtime.workspace = true
korin_tree.workspace = true
korin_layout.workspace = true
korin_style.workspace = true

ratatui.workspace = true

[dev-dependencies]
korin_view.workspace = true
korin_reactive.workspace = true
korin_components.workspace = true
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
