[package]
name = "korin_ratatui"
version.workspace = true
edition.workspace = true

[dependencies]
korin_event.workspace = true
korin_runtime.workspace = true
korin_tree.workspace = true
korin_layout.workspace = true
korin_style.workspace = true
korin_macros.workspace = true

ratatui.workspace = true

[lints]
workspace = true
