[package]
name = "korin_runtime"
version.workspace = true
edition.workspace = true

[dependencies]
korin_tree.workspace = true
korin_layout.workspace = true
korin_style.workspace = true
korin_event.workspace = true
korin_view.workspace = true
korin_focus.workspace = true
korin_reactive.workspace = true

thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
