[package]
name = "korin_style"
version.workspace = true
edition.workspace = true

[dependencies]
bitflags.workspace = true
crossterm = { workspace = true, optional = true, default-features = false }

korin_layout.workspace = true


[lints]
workspace = true


[features]
default = []
crossterm = ["dep:crossterm"]
